--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,18 @@
             <artifactId>gson</artifactId>
             <version>2.10</version>
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-boot-starter</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-rest</artifactId>
+		</dependency>
+
+
+	</dependencies>
 
 	<build>
 		<plugins>
