--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,5 +28,9 @@ logging.level.org.hibernate.type.descriptor = TRACE
 spring.security.user.name=default@default.def
 spring.security.user.password=123
 
+# ERROR HANDLING (ErrorProperties)
+server.error.include-stacktrace=never 
+
+
 
 
